--- a/srandrd.1
+++ b/srandrd.1
@@ -1,99 +1,69 @@
-'\" t
-.\"     Title: srandrd
-.\"    Author: [see the "AUTHOR" section]
-.\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
-.\"      Date: 04/24/2013
-.\"    Manual: \ \&
-.\"    Source: \ \&
-.\"  Language: English
-.\"
-.TH "SRANDRD" "1" "04/24/2013" "\ \&" "\ \&"
-.\" -----------------------------------------------------------------
-.\" * Define some portability stuff
-.\" -----------------------------------------------------------------
-.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-.\" http://bugs.debian.org/507673
-.\" http://lists.gnu.org/archive/html/groff/2009-02/msg00013.html
-.\" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-.ie \n(.g .ds Aq \(aq
-.el       .ds Aq '
-.\" -----------------------------------------------------------------
-.\" * set default formatting
-.\" -----------------------------------------------------------------
-.\" disable hyphenation
-.nh
-.\" disable justification (adjust text to left margin only)
-.ad l
-.\" -----------------------------------------------------------------
-.\" * MAIN CONTENT STARTS HERE *
-.\" -----------------------------------------------------------------
-.SH "NAME"
-srandrd \- simple randr daemon
-.SH "SYNOPSIS"
-.sp
-\fBsrandrd\fR [\fIOPTIONS\fR] \fICOMMAND\fR
-.SH "OPTIONS"
-.PP
-\fB\-h\fR
+.\"                                      Hey, EMACS: -*- nroff -*-
+.\" First parameter, NAME, should be all caps
+.\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
+.\" other parameters are allowed: see man(7), man(1)
+.Dd Apr 24, 2013
+.\" Please adjust this date whenever revising the manpage.
+.Dt SRANDRD 1
+.Os
+.Sh NAME
+.Nm srandrd
+.Nd A simple randr daemon
+.Sh SYNOPSIS
+.Nm
+.Op Fl hnvV
+.Ar COMMAND
+.Sh DESCRIPTION
+.Nm
+is a tool that executes a command on xrandr output change events, i.e.,
+if a monitor is plugged or unplugged.  By default srandrd forks to the
+background and exits when the X server exits.
+.Sh OPTIONS
+.Pp
+.Bl -tag -width Ds
+.It Fl h
 .RS 4
 Print help and exit
-.RE
-.PP
-\fB\-n\fR
-.RS 4
-Don\(cqt fork to background
-.RE
-.PP
-\fB\-V\fR
-.RS 4
+.It Fl n
+Run in foreground, do not detach from calling terminal and fork to background
+.It Fl v
+Enable verbose messages.  Useful for debugging in the foreground
+.It Fl V
 Show version information and exit
-.RE
-.SH "DESCRIPTION"
-.sp
-srandrd(1) is a tool that executes a command on xrandr output change events, i\&.e\&. if a monitor is plugged or unplugged\&. By default srandrd forks to background and exits if the xserver exits\&. In the childs environment the environment variable \fISRANDRD_ACTION\fR is set which is of the format
-.sp
-.if n \{\
-.RS 4
-.\}
-.nf
+.El
+.Pp
+The environment variable
+.Ar SRANDRD_ACTION
+is passed to the command with the following value:
+.Bd -literal -offset indent
 DISPLAYNAME [connected|disconnected|unknown]
-.fi
-.if n \{\
-.RE
-.\}
-.SH "EXAMPLE"
-.sp
-An example usage could be
-.sp
-.if n \{\
-.RS 4
-.\}
-.nf
-srandrd display_handler
-.fi
-.if n \{\
-.RE
-.\}
-.sp
-where display_handler being the following script
-.sp
-.if n \{\
-.RS 4
-.\}
-.nf
+.Ed
+.Sh EXAMPLE
+Here is an example of how to use
+.Nm :
+.Bd -literal -offset indent
+srandrd /path/to/my-script.sh
+.Ed
+.Pp
+Where
+.Ar /path/to/my-script.sh
+could look something like this:
+.Bd -literal -offset indent
 #!/bin/sh
 
 case "$SRANDRD_ACTION" in
-  "DVI\-0 connected") xrandr \-\-output DVI\-0 \-\-auto \-\-right\-of LVDS;;
-  "VGA\-0 connected") xrandr \-\-output VGA\-0 \-\-auto \-\-left\-of LVDS;;
+  "DVI-0 connected")
+	xrandr --output DVI-0 --auto --right-of LVDS
+	;;
+  "VGA-0 connected")
+	xrandr --output VGA-0 --auto --left-of LVDS
+	;;
 esac
-.fi
-.if n \{\
-.RE
-.\}
-.SH "RESOURCES"
-.sp
-bitbucket: http://bitbucket\&.org/portix/srandrd
-.SH "AUTHOR"
-.sp
-Stefan Bolte <portix@gmx\&.net>
+.Ed
+.Sh RESOURCES
+.Bl -tag -compact
+.It bitbucket: Aq http://bitbucket.org/portix/srandrd
+.It GitHub: Aq https://github.com/troglobit/srandard
+.El
+.Sh AUTHOR
+.An Stefan Bolte Aq mailto:portix@gmx.net
