srandrd.1: Update date and set correct man volume
Signed-off-by: Joachim Nilsson <troglobit@gmail.com>

--- a/srandrd.1
+++ b/srandrd.1
@@ -2,9 +2,9 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.Dd Apr 24, 2013
+.Dd Mar 29, 2016
 .\" Please adjust this date whenever revising the manpage.
-.Dt SRANDRD 1
+.Dt SRANDRD 1 URM
 .Os
 .Sh NAME
 .Nm srandrd
