Update license and author fields
Correct attribution and add origin and references to README.

Signed-off-by: Joachim Nilsson <troglobit@gmail.com>

--- a/srandrd.1
+++ b/srandrd.1
@@ -65,10 +65,13 @@ case "$SRANDRD_ACTION" in
 	;;
 esac
 .Ed
-.Sh RESOURCES
-.Bl -tag -compact
-.It bitbucket: Aq http://bitbucket.org/portix/srandrd
-.It GitHub: Aq https://github.com/troglobit/srandard
-.El
-.Sh AUTHOR
-.An Stefan Bolte Aq mailto:portix@gmx.net
+.Sh AUTHORS
+Originally developed by
+.An Stefan Bolte
+at
+.Aq http://bitbucket.org/portix/srandrd ,
+forked by
+.An Joachim Nilsson
+at
+.Aq https://github.com/troglobit/srandard
+in 2016.
