--- a/xplugd.1
+++ b/xplugd.1
@@ -4,11 +4,11 @@
 .\" other parameters are allowed: see man(7), man(1)
 .Dd Mar 29, 2016
 .\" Please adjust this date whenever revising the manpage.
-.Dt SRANDRD 1 URM
+.Dt XPLUGD 1 URM
 .Os
 .Sh NAME
-.Nm srandrd
-.Nd A simple randr daemon
+.Nm xplugd
+.Nd monitor plug/unplug helper
 .Sh SYNOPSIS
 .Nm
 .Op Fl hnvV
@@ -16,7 +16,7 @@
 .Sh DESCRIPTION
 .Nm
 is a tool that executes a script on xrandr output change events, i.e.,
-if a monitor is plugged or unplugged.  By default srandrd forks to the
+if a monitor is plugged or unplugged.  By default xplugd forks to the
 background and exits when the X server exits.
 .Sh OPTIONS
 .Pp
@@ -33,7 +33,7 @@ Show version information and exit
 .El
 .Pp
 The environment variable
-.Ar SRANDRD_ACTION
+.Ar XPLUG_EVENT
 passed to the script has the following syntax:
 .Bd -literal -offset indent
 DISPLAYNAME [connected|disconnected|unknown]
@@ -47,7 +47,7 @@ HDMI3 connected
 Here is an example of how to use
 .Nm :
 .Bd -literal -offset indent
-srandrd /path/to/my-script.sh
+xplugd /path/to/my-script.sh
 .Ed
 .Pp
 Where
@@ -56,7 +56,7 @@ could look something like this:
 .Bd -literal -offset indent
 #!/bin/sh
 
-case "$SRANDRD_ACTION" in
+case "$XPLUG_EVENT" in
   "DVI-0 connected")
 	xrandr --output DVI-0 --auto --right-of LVDS
 	;;
@@ -66,12 +66,11 @@ case "$SRANDRD_ACTION" in
 esac
 .Ed
 .Sh AUTHORS
-Originally developed by
-.An Stefan Bolte
-at
-.Aq http://bitbucket.org/portix/srandrd ,
-forked by
-.An Joachim Nilsson
-at
-.Aq https://github.com/troglobit/srandard
-in 2016.
+Stefan Bolte is the original author of
+.Nm
+under its former guise as
+.Nm srandrd ,
+.Aq http://bitbucket.org/portix/srandrd .
+In 2016 An Joachim Nilsson forked and renamed the project for further
+development at
+.Aq https://github.com/troglobit/xplugd .
