Unify nomenclature between man page and daemon usage text
Signed-off-by: Joachim Nilsson <troglobit@gmail.com>

--- a/xplugd.1
+++ b/xplugd.1
@@ -13,7 +13,7 @@
 .Nm
 .Op Fl hnv
 .Op Fl l Ar LEVEL
-.Ar [SCRIPT]
+.Ar [FILE]
 .Sh DESCRIPTION
 .Nm
 is a daemon that executes a script on X input and RandR changes, i.e.,
@@ -51,7 +51,7 @@ Show version information and exit
 .El
 .Pp
 The optional
-.Pa SCRIPT
+.Pa FILE
 argument defaults to
 .Pa ~/.xplugrc
 and is called with the following arguments:
