man: Fix spelling error found by lintian
Signed-off-by: Joachim Nilsson <troglobit@gmail.com>

--- a/man/xplugd.1
+++ b/man/xplugd.1
@@ -72,7 +72,7 @@ device number.
 One of
 .Ar connected | disconnected | unknown
 .It $4 = Ar DESCRIPTION
-An optional description enclosed in double qoutes, only used for
+An optional description enclosed in double quotes, only used for
 .Xr xinput 1
 devices, like the keyboard manufacturer and model name.
 .El
