Add Magnus to list of (significant) AUTHORS
Signed-off-by: Joachim Nilsson <troglobit@gmail.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,5 +3,5 @@ usual amount of frog DNA needed to glue it all together.
 
 - Stefan Bolte <portix@gmx.net> wrote srandrd
 - Andrew Shadura <andrewsh@debian.org> wrote inputplug
-- Joachim Nilsson <troglobit@gmail.com> cut and pasted
-
+- Joachim Nilsson <troglobit@gmail.com> a.k.a Dr Frankenstein
+- Magnus Malm <magnusmalm@gmail.com> added EDID support
