Update maintainer last name and update copyright years
Signed-off-by: Joachim Wiberg <troglobit@gmail.com>

--- a/man/xplugd.1
+++ b/man/xplugd.1
@@ -2,7 +2,7 @@
 .\" First parameter, NAME, should be all caps
 .\" Second parameter, SECTION, should be 1-8, maybe w/ subsection
 .\" other parameters are allowed: see man(7), man(1)
-.Dd Jul 8, 2020
+.Dd Jan 29, 2023
 .\" Please adjust this date whenever revising the manpage.
 .Dt XPLUGD 1 URM
 .Os
@@ -131,7 +131,7 @@ Fallback path, for compat with earlier releases
 .El
 .Sh AUTHORS
 .Nm
-was created by Joachim Nilsson in 2016 for use with window managers like
+was created by Joachim Wiberg in 2016 for use with window managers like
 .Xr awesome 1
 and
 .Xr i3 1 .
